--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: your_local_password
-      POSTGRES_DB: postgres
+      POSTGRES_PASSWORD: burak123!
+      POSTGRES_DB: bitask_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
